# WaveSim

./: Cargo.toml  LICENSE  README.md
data/cmaps/: CET-D10.csv  CET-D4.csv  CET-D6.csv  CET-R1.csv  berlin.csv  smooth-cool-warm-table.csv  viridis.csv
data/shapes/: edges_data.txt
src/: functions.rs  main.rs
