[package]
name = "wave"
version = "0.1.0"
authors = ["MEisebitt <moritz.eisebitt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.6.0", features = ["image"] }
# druid = { git = "https://github.com/linebender/druid", branch = "master"}